admin page design

--- a/src/stories/Colour.stories.mdx
+++ b/src/stories/Colour.stories.mdx
@@ -30,7 +30,7 @@ import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs";
   <ColorItem
     title="blue"
     subtitle="using color ($blue-(number))"
-    colors={{  
+    colors={{        
       blue600: '#1570EF', 
       blue50: '#EFF8FF',
       }}
@@ -90,7 +90,8 @@ import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs";
     title="grey shades for fonts"
     subtitle="using color ($fonts-blue-(number))"
     colors={{
-      blue700: '#175CD3',   
+      blue700: '#175CD3',
+      blue600: '#2970FF',   
     }}
   />
   <ColorItem
