new member pages design

--- a/src/stories/Colour.stories.mdx
+++ b/src/stories/Colour.stories.mdx
@@ -7,6 +7,7 @@ import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs";
     title="white with grey"
     subtitle="using color ($grey-(number))"
     colors={{
+      grey500: '#D0D5DD',
       grey300: '#bbbbbb',
       grey200: '#EAECF0',
       grey100: '#f2f4f7',
